--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,7 +40,7 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0",
     "tailwindcss": "^3.4.17"
   }
